# bestweather

./: .gitignore  Dockerfile  Dockerfile_v1  LICENSE  README.md  manage.py  pyproject.toml
bestweather/: asgi.py  settings.py  urls.py  wsgi.py
docker/django/: entrypoint.sh
pages/: models.py  tests.py  urls.py  views.py
templates/: base.html
templates/pages/: home.html
