[tool.poetry]
name = "bestweather"
version = "0.1.0"
description = "App to aid in determining best locations based on weather"
authors = ["Jack Roten <thejackroten@gmail.com.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
